[project]
name = "lopi999-llm"
description = "LLM nodes for ComfyUI including a Canary-Qwen-2.5B audio transcription node. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["nemo_toolkit[asr,tts] @ git+https://github.com/NVIDIA/NeMo.git", "sacrebleu", "llama-cpp-python"]

[project.urls]
Repository = "https://github.com/LaVie024/comfyui-lopi999-llm"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/LaVie024/comfyui-lopi999-llm/wiki"
"Bug Tracker" = "https://github.com/LaVie024/comfyui-lopi999-llm/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-lopi999-llm"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

